...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_prices_title"

            app:prefixText="R$ ">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_alcohol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:textColor="?attr/colorOnSurface" />
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_alcoholl"
            app:prefixText="R$ ">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_gasoline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:textColor="?attr/colorOnSurface" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/btn_calculate"
...
